Basic change to test deploy script

--- a/events.yaml
+++ b/events.yaml
@@ -8,7 +8,7 @@ events:
     the tools that make data science possible.
 
     After all, we need the right packages and pipelines to get the most out of our
-    data. We will dive into our toolbox and examine some of the equipment at our
+    data. We'll dive into our toolbox and examine some of the equipment at our
     disposal.
 
     During the meetup we will host two practitioners active in this domain. Both
