Add name speaker

--- a/events.yaml
+++ b/events.yaml
@@ -7,7 +7,7 @@ events:
     - title: TODO
       subtitle: ""
       speaker:
-        name: TODO
+        name: Erik van Driessen
         affiliation: TODO
         bio: |
           TODO
