--- a/events.yaml
+++ b/events.yaml
@@ -1,5 +1,5 @@
 events:
-- title: Data Wizards
+- title: Data Vizards
   type: meetup
   description: |
     "It's magic!" Or so they say. Creating beautiful and enchanting visualizations out of nowhere.
