test met x achter naam

--- a/events.yaml
+++ b/events.yaml
@@ -21,7 +21,7 @@ events:
     - title: The collateral beauty of being a data analyst
       subtitle: "Generating abstract visuals using machine learning"
       speaker:
-        name: Erik Driessen
+        name: Erik Driessenx
         affiliation: Independent Digital Creative
         bio: |
           I have a background in computer science and have been working in data analysis since 2013. Most of my experience is in digital analytics and business analytics. I consider myself an exploratory programmer that likes to work on projects that force me to use new technologies.
